@@ -1,26 +1,32 @@
 repositories {
-    jcenter()
+  jcenter()
 }
 configurations {
-    ktlint
+  ktlint
 }
 dependencies {
-    ktlint "com.pinterest:ktlint:0.39.0"
+  ktlint("com.pinterest:ktlint:0.50.0") {
+    attributes {
+      attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
+    }
+  }
 }
 task ktlint(type: JavaExec, group: "quality") {
-    description = "Check Kotlin code style."
-    classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
-    args "**/src/**/*.kt"
+  description = "Check Kotlin code style."
+  classpath = configurations.ktlint
+  mainClass.set("com.pinterest.ktlint.Main")
+  args "**/src/**/*.kt"
 }
 task ktlintFormat(type: JavaExec, group: "quality") {
-    description = "Fix Kotlin code style deviations."
-    classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
-    args "-F", "**/src/**/*.kt"
+  group = "formatting"
+  description = "Fix Kotlin code style deviations."
+  classpath = configurations.ktlint
+  mainClass.set("com.pinterest.ktlint.Main")
+  args "-F", "**/src/**/*.kt"
+  jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 afterEvaluate {
-    tasks.withType(Test) {
-        dependsOn 'ktlint'
-    }
+  tasks.withType(Test) {
+    dependsOn 'ktlint'
+  }
 }
